Fix 'Oops!' text on 404 page being cut off
Fixes https://github.com/WordPress/wporg-news-2021/issues/428

--- a/source/wp-content/themes/wporg-news-2021/sass/page/_404.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/page/_404.scss
@@ -12,15 +12,7 @@ body.error404 {
 	}
 
 	.site-content-container {
-
-		/*
-		 * Prevent "oops" from creating a horizontal scroll.
-		 * In some iOS versions, these rules also have to be applied to <html>, but that would bleed over to other
-		 * pages. It's better to just let there be a scroll, since it's not a commonly used page.
-		 */
-		position: relative; // needed for overflow to work
-		overflow: hidden;
-
+		position: relative;
 		margin-top: 0;
 		color: var(--wp--preset--color--off-white-2);
 		padding-left: var(--wp--custom--alignment--edge-spacing);
@@ -130,7 +122,7 @@ body.error404 {
 
 	.global-footer {
 		margin-top: 150px;
-		border-top: 1px solid var(--wp--preset--color--darker-grey);
+		background: none;
 
 		@include break-small() {
 			margin-top: 0;
